--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -13,168 +13,172 @@
   <meta name="robots" content="noindex,nofollow"/>
 {% endblock %}
 
-{% block page_css %}
-<link href="{{ static('css/whatsnew-128.css') }}" rel="stylesheet" type="text/css" />
+{% block base_css %}
+  <link href="{{ static('css/whatsnew-128.css') }}" rel="stylesheet" type="text/css"/>
 {% endblock %}
 
-
 {% block content %}
-<section>
-  <div class="container">
-    <section class="appeal-welcome">
-      <div class="space-things">
-        {{ svg('appeal/whatsnew-128/space-things') }}
-      </div>
-      <div class="screenshot-128">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}) }}
-      </div>
-      <div class="nebula-branding">
-        {{ svg('appeal/whatsnew-128/nebula-branding') }}
-      </div>
-      <div class="non-carousel-carousel">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}) }}
-      </div>
-      <div class="welcome-message with-frame">
-        <header>{{_('Welcome to the evolution of Supernova!')}}</header>
+  <main>
+    <div class="main-content">
+      <div class="overlay"></div>
+      <section class="appeal-welcome">
+        <div class="header-collection">
+          <div class="space-things">
+            {{ svg('appeal/whatsnew-128/space-things') }}
+          </div>
+          <div class="screenshot-128">
+            {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}) }}
+          </div>
+        </div>
+          <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
+            {{ svg('appeal/whatsnew-128/nebula-branding') }}
+          </div>
+        <div class="welcome-message with-frame">
+          <header>{{ _('Welcome to the evolution of Supernova!') }}</header>
+          <p>
+            {% trans trimmed %}
+              With revolutionary code improvements, Nebula sets the stage for
+              faster delivery of new features, reinforced stability, stellar
+              quality-of-life enhancements and visual refinements.
+            {% endtrans %}
+          </p>
+        </div>
+
+        <div class="non-carousel-carousel">
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}) }}
+        </div>
+      </section>
+
+      <section class="fast-and-fluid two-column">
+        <h2>{{ _('Fast and Fluid') }}</h2>
         <p>
           {% trans trimmed %}
-          With revolutionary code improvements, Nebula sets the stage for
-          faster delivery of new features, reinforced stability, stellar
-          quality-of-life enhancements and visual refinements.
+            Feel the difference smarter code makes possible! Interactions with your
+            message list are faster, the email space is more responsive, and
+            Thunderbird is more stable and reliable.
           {% endtrans %}
         </p>
-      </div>
-    </section>
+        <div class="picture rocket">
+          {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
+          {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
+        </div>
+      </section>
 
-    <section class="fast-and-fluid two-column">
-      <header>{{_('Fast and Fluid')}}</header>
-      <p>
-        {% trans trimmed %}
-        Feel the difference smarter code makes possible! Interactions with your
-        message list are faster, the email space is more responsive, and
-        Thunderbird is more stable and reliable.
-        {% endtrans %}
-      </p>
-      <div class="picture rocket">
-        {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
-        {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
-      </div>
-    </section>
-
-    <section class="cards-view two-column flipped">
-      <header>{{_('Cards View')}}</header>
-      <p>
-        {% trans trimmed %}
-        The updated design makes scanning your emails faster, with a more
-        attractive layout and an improved threads experience. Plus, the height
-        of email cards adjusts automatically based on your settings, so
-        everything looks just right.
-        {% endtrans %}
-      </p>
-      <div class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}) }}
-      </div>
-    </section>
-
-    <section class="accent-colors two-column">
-      <header>{{_('Accent Colors')}}</header>
-      <p>
-        {% trans trimmed %}
-        Enhanced theme compatibility, especially for Linux users on Ubuntu
-        and Mint. Your Thunderbird will better blend with your desktop
-        environment, seamlessly matching the system’s accent colors.
-        {% endtrans %}
-      </p>
-      <div class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}) }}
-      </div>
-    </section>
-
-    <section class="folder-pane two-column flipped">
-      <header>{{_('Folder Pane')}}</header>
-      <p>
-        {% trans trimmed %}
-        A bundle of improvements including faster rendering and searching
-        of unified folders, multi-folder selection capabilities, and better
-        recall of message thread states.
-        {% endtrans %}
-      </p>
-      <div class="picture">
-        {{ svg('appeal/whatsnew-128/folder-pane') }}
-      </div>
-    </section>
-
-    <section class="rust-revolution two-column">
-      <header>{{_('Rust Revolution')}}</header>
-      <p>
-        {% trans trimmed %}
-        We've overcome major roadblocks to bring Rust into Thunderbird.
-        This paves the way for better code, shared features between desktop and
-        mobile, and faster development time. It's a game-changer for our
-        developers and for our users.
-        {% endtrans %}
-      </p>
-      <div class="picture">
-        {{ svg('appeal/whatsnew-128/rust-gears') }}
-      </div>
-    </section>
-
-    <section class="streamlined-menu full-width">
-      <p>
-        {% trans trimmed %}
-        Streamlined menu navigation with better visual cues and less
-        cognitive burden to make your email experience more efficient
-        and more enjoyable.
-        {% endtrans %}
-      </p>
-    </section>
-
-    <section class="additional-features three-column">
-      <div class="column">
-        <header>{{ _('Native Windows Notifications')}}</header>
+      <section class="cards-view two-column flipped">
+        <h3>{{ _('Cards View') }}</h3>
         <p>
           {% trans trimmed %}
-          Fixed and fully functional! Clicking a notification dismisses it,
-          brings Thunderbird to the foreground, and selects the message.
-          Notifications now disappear when Thunderbird closes.
+            The updated design makes scanning your emails faster, with a more
+            attractive layout and an improved threads experience. Plus, the height
+            of email cards adjusts automatically based on your settings, so
+            everything looks just right.
           {% endtrans %}
         </p>
-      </div>
-      <div class="column">
-        <header>{{ _('Context Menu Improvements')}}</header>
+        <div class="picture with-frame">
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}) }}
+        </div>
+      </section>
+
+      <section class="accent-colors two-column">
+        <h3>{{ _('Accent Colors') }}</h3>
         <p>
           {% trans trimmed %}
-          Reorganized for a smoother experience, with primary actions
-          now as icons for quick access.
+            Enhanced theme compatibility, especially for Linux users on Ubuntu
+            and Mint. Your Thunderbird will better blend with your desktop
+            environment, seamlessly matching the system’s accent colors.
           {% endtrans %}
         </p>
-      </div>
-      <div class="column">
-        <header>{{ _('Account Color Customization')}}</header>
+        <div class="picture with-frame">
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}) }}
+        </div>
+      </section>
+
+      <section class="folder-pane two-column flipped">
+        <h3>{{ _('Folder Pane') }}</h3>
         <p>
           {% trans trimmed %}
-          By popular demand, you can now customize the color of your account
-          icons. These colors also show up in the “From” selection
-          when composing emails.
+            A bundle of improvements including faster rendering and searching
+            of unified folders, multi-folder selection capabilities, and better
+            recall of message thread states.
           {% endtrans %}
         </p>
-      </div>
-    </section>
-    <section class="nebula-enables full-width">
-      <p>
-        {% trans trimmed %}
-        “Nebula” enables an email experience that shines brighter than ever.
-        Expect more updates and helpful new features to materialize over
-        the upcoming months.
-        {% endtrans %}
-      </p>
-    </section>
-  </div>
-</section>
+        <div class="picture">
+          {{ svg('appeal/whatsnew-128/folder-pane') }}
+        </div>
+      </section>
+
+      <section class="rust-revolution two-column">
+        <h2>{{ _('Rust Revolution') }}</h2>
+        <p>
+          {% trans trimmed %}
+            We've overcome major roadblocks to bring Rust into Thunderbird.
+            This paves the way for better code, shared features between desktop and
+            mobile, and faster development time. It's a game-changer for our
+            developers and for our users.
+          {% endtrans %}
+        </p>
+        <div class="picture">
+          {{ svg('appeal/whatsnew-128/rust-gears') }}
+        </div>
+      </section>
+    </div>
+    <div class="container pre-footer">
+      <section class="streamlined-menu full-width">
+        <p>
+          {% trans trimmed %}
+            Streamlined menu navigation with better visual cues and less
+            cognitive burden to make your email experience more efficient
+            and more enjoyable.
+          {% endtrans %}
+        </p>
+      </section>
+
+      <section class="additional-features three-column">
+        <div class="column">
+          <h3>{{ _('Native Windows Notifications') }}</h3>
+          <p>
+            {% trans trimmed %}
+              Fixed and fully functional! Clicking a notification dismisses it,
+              brings Thunderbird to the foreground, and selects the message.
+              Notifications now disappear when Thunderbird closes.
+            {% endtrans %}
+          </p>
+        </div>
+        <div class="column">
+          <h3>{{ _('Context Menu Improvements') }}</h3>
+          <p>
+            {% trans trimmed %}
+              Reorganized for a smoother experience, with primary actions
+              now as icons for quick access.
+            {% endtrans %}
+          </p>
+        </div>
+        <div class="column">
+          <h3>{{ _('Account Color Customization') }}</h3>
+          <p>
+            {% trans trimmed %}
+              By popular demand, you can now customize the color of your account
+              icons. These colors also show up in the “From” selection
+              when composing emails.
+            {% endtrans %}
+          </p>
+        </div>
+      </section>
+      <section class="nebula-enables full-width">
+        <p>
+          {% trans trimmed %}
+            “Nebula” enables an email experience that shines brighter than ever.
+            Expect more updates and helpful new features to materialize over
+            the upcoming months.
+          {% endtrans %}
+        </p>
+      </section>
+    </div>
+  </main>
 {% endblock %}
 
 {% block site_footer %}
-  <div class="appeal-footer-container">
+  <footer class="appeal-footer-container">
     <div class="pre-footer-cover-container">
       {% include 'includes/components/page-separator-cover.html' %}
     </div>
@@ -182,7 +186,7 @@
       {% include 'includes/appeal-footer.html' %}
     </div>
     {% include 'includes/donation-includes.html' %}
-  </div>
+  </footer>
 {% endblock site_footer %}
 
 
