--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -18,80 +18,81 @@
 {% endblock %}
 
 {% block content %}
-  <main>
-    <div class="main-content">
-      <div class="overlay"></div>
-      <div class="nebula"></div>
-      <section class="appeal-welcome">
-        <div class="header-collection">
-          <div class="space-things">
-            {{ svg('appeal/whatsnew-128/space-things') }}
-          </div>
-          <div class="screenshot-128">
-            {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}) }}
-          </div>
+  <div class="main-content">
+    <div class="overlay"></div>
+    <div class="sticky-nebula"></div>
 
+    <section class="appeal-welcome">
+      <div class="header-collection">
+        <div class="space-things">
+          {{ svg('appeal/whatsnew-128/space-things') }}
         </div>
-          <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
-            {{ svg('appeal/whatsnew-128/nebula-branding') }}
-          </div>
-        <div class="welcome-message with-frame">
-          <section class="copy">
-            <h2>{{ _('Welcome to the evolution of Supernova!') }}</h2>
-            <p>
-              {% trans trimmed %}
-                With revolutionary code improvements, Nebula sets the stage for
-                faster delivery of new features, reinforced stability, stellar
-                quality-of-life enhancements and visual refinements.
-              {% endtrans %}
-            </p>
-          </section>
+        <div class="screenshot-128">
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}) }}
         </div>
 
-        <div class="non-carousel-carousel">
-          {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}) }}
-        </div>
+      </div>
+      <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
+        {{ svg('appeal/whatsnew-128/nebula-branding') }}
+      </div>
+      <div class="welcome-message with-frame">
+        <section class="copy">
+          <h2>{{ _('Welcome to the evolution of Supernova!') }}</h2>
+          <p>
+            {% trans trimmed %}
+              With revolutionary code improvements, Nebula sets the stage for
+              faster delivery of new features, reinforced stability, stellar
+              quality-of-life enhancements and visual refinements.
+            {% endtrans %}
+          </p>
+        </section>
+      </div>
+
+      <div class="non-carousel-carousel">
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}) }}
+      </div>
+    </section>
+
+
+    <div class="fast-and-fluid two-column">
+      <section class="copy">
+        <h2>{{ _('Fast and Fluid') }}</h2>
+        <p>
+          {% trans trimmed %}
+            Feel the difference smarter code makes possible! Interactions with your
+            message list are faster, the email space is more responsive, and
+            Thunderbird is more stable and reliable.
+          {% endtrans %}
+        </p>
       </section>
+      <aside class="picture rocket">
+        {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
+        {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
+      </aside>
+    </div>
 
-      <div class="fast-and-fluid two-column">
-        <section class="copy">
-          <h2>{{ _('Fast and Fluid') }}</h2>
-          <p>
-            {% trans trimmed %}
-              Feel the difference smarter code makes possible! Interactions with your
-              message list are faster, the email space is more responsive, and
-              Thunderbird is more stable and reliable.
-            {% endtrans %}
-          </p>
-        </section>
-        <aside class="picture rocket">
-          {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
-          {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
-        </aside>
-      </div>
+    <div class="cards-view two-column flipped">
+      <section class="copy">
+        <h3>
+          {{ _('Cards View') }}
+          <span aria-hidden="true">{{ svg('appeal/whatsnew-128/cards-view-icon') }}</span>
+        </h3>
+        <p>
+          {% trans trimmed %}
+            The updated design makes scanning your emails faster, with a more
+            attractive layout and an improved threads experience. Plus, the height
+            of email cards adjusts automatically based on your settings, so
+            everything looks just right.
+          {% endtrans %}
+        </p>
+      </section>
+      <aside class="picture with-frame">
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}) }}
+      </aside>
+    </div>
 
-      <div class="cards-view two-column flipped">
-        <section class="copy">
-          <h3>
-            {{ _('Cards View') }}
-            <span aria-hidden="true">{{ svg('appeal/whatsnew-128/cards-view-icon') }}</span>
-          </h3>
-          <p>
-            {% trans trimmed %}
-              The updated design makes scanning your emails faster, with a more
-              attractive layout and an improved threads experience. Plus, the height
-              of email cards adjusts automatically based on your settings, so
-              everything looks just right.
-            {% endtrans %}
-          </p>
-        </section>
-        <aside class="picture with-frame">
-          {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}) }}
-        </aside>
-      </div>
-
-      <div class="accent-colors two-column">
-        <section class="copy">
+    <div class="accent-colors two-column">
+      <section class="copy">
         <h3>
           {{ _('Accent Colors') }}
           <span aria-hidden="true">{{ svg('appeal/whatsnew-128/accent-colors-icon') }}</span>
@@ -103,101 +104,100 @@
             environment, seamlessly matching the system’s accent colors.
           {% endtrans %}
         </p>
-        </section>
-        <aside class="picture with-frame">
-          {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}) }}
-        </aside>
-      </div>
-
-      <div class="folder-pane two-column flipped">
-        <section class="copy">
-          <h3>
-            {{ _('Folder Pane') }}
-            <span aria-hidden="true">{{ svg('appeal/whatsnew-128/folder-pane-icon') }}</span>
-          </h3>
-          <p>
-            {% trans trimmed %}
-              A bundle of improvements including faster rendering and searching
-              of unified folders, multi-folder selection capabilities, and better
-              recall of message thread states.
-            {% endtrans %}
-          </p>
-        </section>
-        <aside class="picture">
-          {{ svg('appeal/whatsnew-128/folder-pane') }}
-        </aside>
-      </div>
-
-      <section class="rust-revolution two-column">
-        <section class="copy">
-          <h2>{{ _('Rust Revolution') }}</h2>
-          <p>
-            {% trans trimmed %}
-              We've overcome major roadblocks to bring Rust into Thunderbird.
-              This paves the way for better code, shared features between desktop and
-              mobile, and faster development time. It's a game-changer for our
-              developers and for our users.
-            {% endtrans %}
-          </p>
-        </section>
-        <aside class="picture">
-          {{ svg('appeal/whatsnew-128/rust-gears') }}
-        </aside>
       </section>
+      <aside class="picture with-frame">
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}) }}
+      </aside>
     </div>
-    <div class="container pre-footer">
-      <section class="streamlined-menu full-width">
+
+    <div class="folder-pane two-column flipped">
+      <section class="copy">
+        <h3>
+          {{ _('Folder Pane') }}
+          <span aria-hidden="true">{{ svg('appeal/whatsnew-128/folder-pane-icon') }}</span>
+        </h3>
         <p>
           {% trans trimmed %}
-            Streamlined menu navigation with better visual cues and less
-            cognitive burden to make your email experience more efficient
-            and more enjoyable.
+            A bundle of improvements including faster rendering and searching
+            of unified folders, multi-folder selection capabilities, and better
+            recall of message thread states.
           {% endtrans %}
         </p>
       </section>
+      <aside class="picture">
+        {{ svg('appeal/whatsnew-128/folder-pane') }}
+      </aside>
+    </div>
 
-      <section class="additional-features three-column">
-        <div class="column">
-          <h3>{{ _('Native Windows Notifications') }}</h3>
-          <p>
-            {% trans trimmed %}
-              Fixed and fully functional! Clicking a notification dismisses it,
-              brings Thunderbird to the foreground, and selects the message.
-              Notifications now disappear when Thunderbird closes.
-            {% endtrans %}
-          </p>
-        </div>
-        <div class="column">
-          <h3>{{ _('Context Menu Improvements') }}</h3>
-          <p>
-            {% trans trimmed %}
-              Reorganized for a smoother experience, with primary actions
-              now as icons for quick access.
-            {% endtrans %}
-          </p>
-        </div>
-        <div class="column">
-          <h3>{{ _('Account Color Customization') }}</h3>
-          <p>
-            {% trans trimmed %}
-              By popular demand, you can now customize the color of your account
-              icons. These colors also show up in the “From” selection
-              when composing emails.
-            {% endtrans %}
-          </p>
-        </div>
-      </section>
-      <section class="nebula-enables full-width">
+    <section class="rust-revolution two-column">
+      <section class="copy">
+        <h2>{{ _('Rust Revolution') }}</h2>
         <p>
           {% trans trimmed %}
-            “Nebula” enables an email experience that shines brighter than ever.
-            Expect more updates and helpful new features to materialize over
-            the upcoming months.
+            We've overcome major roadblocks to bring Rust into Thunderbird.
+            This paves the way for better code, shared features between desktop and
+            mobile, and faster development time. It's a game-changer for our
+            developers and for our users.
           {% endtrans %}
         </p>
       </section>
-    </div>
-  </main>
+      <aside class="picture">
+        {{ svg('appeal/whatsnew-128/rust-gears') }}
+      </aside>
+    </section>
+  </div>
+  <div class="container pre-footer">
+    <section class="streamlined-menu full-width">
+      <p>
+        {% trans trimmed %}
+          Streamlined menu navigation with better visual cues and less
+          cognitive burden to make your email experience more efficient
+          and more enjoyable.
+        {% endtrans %}
+      </p>
+    </section>
+
+    <section class="additional-features three-column">
+      <div class="column">
+        <h3>{{ _('Native Windows Notifications') }}</h3>
+        <p>
+          {% trans trimmed %}
+            Fixed and fully functional! Clicking a notification dismisses it,
+            brings Thunderbird to the foreground, and selects the message.
+            Notifications now disappear when Thunderbird closes.
+          {% endtrans %}
+        </p>
+      </div>
+      <div class="column">
+        <h3>{{ _('Context Menu Improvements') }}</h3>
+        <p>
+          {% trans trimmed %}
+            Reorganized for a smoother experience, with primary actions
+            now as icons for quick access.
+          {% endtrans %}
+        </p>
+      </div>
+      <div class="column">
+        <h3>{{ _('Account Color Customization') }}</h3>
+        <p>
+          {% trans trimmed %}
+            By popular demand, you can now customize the color of your account
+            icons. These colors also show up in the “From” selection
+            when composing emails.
+          {% endtrans %}
+        </p>
+      </div>
+    </section>
+    <section class="nebula-enables full-width">
+      <p>
+        {% trans trimmed %}
+          “Nebula” enables an email experience that shines brighter than ever.
+          Expect more updates and helpful new features to materialize over
+          the upcoming months.
+        {% endtrans %}
+      </p>
+    </section>
+  </div>
 {% endblock %}
 
 {% block site_footer %}
