--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -24,7 +24,7 @@
 
     <section class="appeal-welcome">
       <div class="header-collection">
-        <div class="space-things">
+        <div class="space-things" aria-hidden="true">
           {{ svg('appeal/whatsnew-128/space-things') }}
         </div>
         <div class="screenshot-128">
@@ -64,7 +64,7 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture rocket">
+      <aside class="picture rocket" aria-hidden="true">
         {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
         {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
       </aside>
@@ -123,7 +123,7 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture">
+      <aside class="picture" aria-hidden="true">
         {{ svg('appeal/whatsnew-128/folder-pane') }}
       </aside>
     </div>
@@ -140,7 +140,7 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture">
+      <aside class="picture" aria-hidden="true">
         {{ svg('appeal/whatsnew-128/rust-gears') }}
       </aside>
     </section>
@@ -201,7 +201,7 @@
 
 {% block site_footer %}
   <footer class="appeal-footer-container">
-    <div class="pre-footer-cover-container">
+    <div class="pre-footer-cover-container" aria-hidden="true">
       {% include 'includes/components/page-separator-cover.html' %}
     </div>
     <div id="footer" class="container footer">
