* Swap px to rem * Accessibility duct tape

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -32,7 +32,9 @@
         </div>
       </div>
       <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
+        <span aria-hidden="true">
         {{ svg('appeal/whatsnew-128/nebula-branding') }}
+        </span>
       </div>
       <div class="welcome-message with-frame">
         <section class="copy">
