--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -28,7 +28,7 @@
           {{ svg('appeal/whatsnew-128/space-things') }}
         </div>
         <div class="screenshot-128">
-          {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}) }}
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
         </div>
       </div>
       <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="non-carousel-carousel">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
       </div>
     </section>
 
@@ -88,7 +88,7 @@
         </p>
       </section>
       <aside class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
@@ -107,7 +107,7 @@
         </p>
       </section>
       <aside class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
