Speed up what's new page by replacing inline svgs with img elements.

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -25,7 +25,7 @@
     <section class="appeal-welcome">
       <div class="header-collection">
         <div class="space-things" aria-hidden="true">
-          {{ svg('appeal/whatsnew-128/space-things') }}
+          {{ svg_img('appeal/whatsnew-128/space-things') }}
         </div>
         <div class="screenshot-128">
           {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
@@ -33,7 +33,7 @@
       </div>
       <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
         <span aria-hidden="true">
-        {{ svg('appeal/whatsnew-128/nebula-branding') }}
+        {{ svg_img('appeal/whatsnew-128/nebula-branding') }}
         </span>
       </div>
       <div class="welcome-message with-frame">
@@ -67,8 +67,8 @@
         </p>
       </section>
       <aside class="picture rocket" aria-hidden="true">
-        {{ svg('appeal/whatsnew-128/fast-and-fluid-rocket') }}
-        {{ svg('appeal/whatsnew-128/fast-and-fluid-stars') }}
+        {{ svg_img('appeal/whatsnew-128/fast-and-fluid-rocket') }}
+        {{ svg_img('appeal/whatsnew-128/fast-and-fluid-stars') }}
       </aside>
     </div>
 
@@ -76,7 +76,7 @@
       <section class="copy">
         <h3>
           {{ _('Cards View') }}
-          <span aria-hidden="true">{{ svg('appeal/whatsnew-128/cards-view-icon') }}</span>
+          <span aria-hidden="true">{{ svg_img('appeal/whatsnew-128/cards-view-icon') }}</span>
         </h3>
         <p>
           {% trans trimmed %}
@@ -96,7 +96,7 @@
       <section class="copy">
         <h3>
           {{ _('Accent Colors') }}
-          <span aria-hidden="true">{{ svg('appeal/whatsnew-128/accent-colors-icon') }}</span>
+          <span aria-hidden="true">{{ svg_img('appeal/whatsnew-128/accent-colors-icon') }}</span>
         </h3>
         <p>
           {% trans trimmed %}
@@ -115,7 +115,7 @@
       <section class="copy">
         <h3>
           {{ _('Folder Pane') }}
-          <span aria-hidden="true">{{ svg('appeal/whatsnew-128/folder-pane-icon') }}</span>
+          <span aria-hidden="true">{{ svg_img('appeal/whatsnew-128/folder-pane-icon') }}</span>
         </h3>
         <p>
           {% trans trimmed %}
@@ -126,7 +126,7 @@
         </p>
       </section>
       <aside class="picture" aria-hidden="true">
-        {{ svg('appeal/whatsnew-128/folder-pane') }}
+        {{ svg_img('appeal/whatsnew-128/folder-pane') }}
       </aside>
     </div>
 
@@ -143,7 +143,7 @@
         </p>
       </section>
       <aside class="picture" aria-hidden="true">
-        {{ svg('appeal/whatsnew-128/rust-gears') }}
+        {{ svg_img('appeal/whatsnew-128/rust-gears') }}
       </aside>
     </section>
   </div>
@@ -160,7 +160,7 @@
 
     <section class="additional-features three-column">
       <div class="column">
-        <div class="feature" aria-hidden="true">{{ svg('appeal/whatsnew-128/native-windows-notifications-icon') }}</div>
+        <div class="feature" aria-hidden="true">{{ svg_img('appeal/whatsnew-128/native-windows-notifications-icon') }}</div>
         <div class="content">
           <h4>
             {{ _('Native Windows Notifications') }}
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="feature" aria-hidden="true">{{ svg('appeal/whatsnew-128/context-menu-improvements-icon') }}</div>
+        <div class="feature" aria-hidden="true">{{ svg_img('appeal/whatsnew-128/context-menu-improvements-icon') }}</div>
         <div class="content">
           <h4>
             {{ _('Context Menu Improvements') }}
@@ -189,7 +189,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="feature" aria-hidden="true">{{ svg('appeal/whatsnew-128/account-color-customization-icon') }}</div>
+        <div class="feature" aria-hidden="true">{{ svg_img('appeal/whatsnew-128/account-color-customization-icon') }}</div>
         <div class="content">
           <h4>
             {{ _('Account Color Customization') }}
