Various whatnew 128 style fixes

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -129,8 +129,8 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture" aria-hidden="true">
-        {{ svg_img('appeal/whatsnew-128/folder-pane') }}
+      <aside class="picture with-frame">
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/folder-pane.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
@@ -147,7 +147,7 @@
         </p>
       </section>
       <aside class="picture" aria-hidden="true">
-        {{ svg_img('appeal/whatsnew-128/rust-gears') }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/rust-gears.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
       </aside>
     </section>
   </div>
