Don't localize empty strings

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -32,7 +32,7 @@
           {{ svg_img('appeal/whatsnew-128/space-things') }}
         </div>
         <div class="screenshot-128">
-          {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+          {{ high_res_img('thunderbird/appeal/whatsnew-128/128-screenshot.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
         </div>
       </div>
       <div class="nebula-branding" aria-label="{{ _('Thunderbird 128 Nebula') }}">
@@ -54,7 +54,7 @@
       </div>
 
       <div class="non-carousel-carousel">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/non-carousel-carousel.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
       </div>
     </section>
 
@@ -92,7 +92,7 @@
         </p>
       </section>
       <aside class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/cards-view.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
@@ -111,7 +111,7 @@
         </p>
       </section>
       <aside class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/accent-colors-items.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
@@ -130,7 +130,7 @@
         </p>
       </section>
       <aside class="picture with-frame">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/folder-pane.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/folder-pane.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
       </aside>
     </div>
 
@@ -147,7 +147,7 @@
         </p>
       </section>
       <aside class="picture" aria-hidden="true">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/rust-gears.png', {'alt': _('')}, alt_formats=('avif', 'webp')) }}
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/rust-gears.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
       </aside>
     </section>
   </div>
