Fix rocket illustration

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -70,10 +70,7 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture rocket" aria-hidden="true">
-        {{ svg_img('appeal/whatsnew-128/fast-and-fluid-rocket') }}
-        {{ svg_img('appeal/whatsnew-128/fast-and-fluid-stars') }}
-      </aside>
+      <aside class="picture rocket" aria-hidden="true"></aside>
     </div>
 
     <div class="cards-view two-column flipped">
