Re-work bottom content

--- a/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
+++ b/sites/www.thunderbird.net/thunderbird/128.0/whatsnew/index.html
@@ -143,10 +143,10 @@
           {% endtrans %}
         </p>
       </section>
-      <aside class="picture" aria-hidden="true">
-        {{ high_res_img('thunderbird/appeal/whatsnew-128/rust-gears.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
-      </aside>
     </section>
+    <aside class="right-wrap" aria-hidden="true">
+        {{ high_res_img('thunderbird/appeal/whatsnew-128/rust-gears.png', {'alt': ''}, alt_formats=('avif', 'webp')) }}
+    </aside>
   </div>
   <div class="pre-footer">
     <section class="streamlined-menu full-width">
