Add our mission statement as a new page accessible from About Us.

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -32,6 +32,9 @@
         </div>
       </div>
     </div>
+    <div class="back">
+      <a class="strong" href="{{ url('thunderbird.about.our-mission-statement') }}">{{ _('Our Mission Statement') }}</a>
+    </div>
   </div>
 </section>
 {% include 'includes/components/page-separator.html' %}
