--- a/sites/www.thunderbird.net/thank-you/index.html
+++ b/sites/www.thunderbird.net/thank-you/index.html
@@ -5,7 +5,7 @@
 {% set active_page = "post-download" %}
 {% extends "includes/base/page.html" %}
 
-{% block page_title %}{{ _('Just one more step!') }}{% endblock %}
+{% block page_title %}{{ _('Thank You!') }}{% endblock %}
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 {% block category %}{{ _('Resources') }}{% endblock %}
 {% block breadcrumbs %}{% endblock %}
