Swap About Us to Who We Are on Mission Statement page.

--- a/sites/www.thunderbird.net/about/mission-statement/index.html
+++ b/sites/www.thunderbird.net/about/mission-statement/index.html
@@ -25,7 +25,7 @@
         </p>
       </div>
       <div class="back">
-        <a class="strong" href="{{ url('thunderbird.about') }}">{{ _('About Us') }}</a>
+        <a class="strong" href="{{ url('thunderbird.about') }}">{{ _('Who We Are') }}</a>
       </div>
     </div>
   </section>
