Fix small error in hero text

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -25,7 +25,7 @@ with great features!') }}{% endblock %}
         <p class="sub-tag">
           {% trans %}
           Meet Thunderbird, the <strong>email</strong>,
-          <strong>calendar</strong>, and <strong>contacts</strong> app that maximizes your freedoms.
+          <strong>calendar</strong> and <strong>contacts</strong> app that maximizes your freedom.
           {% endtrans %}
         </p>
       </div>
