Update English homepage assets.

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -97,18 +97,13 @@ with great features!') }}{% endblock %}
         <picture>
           <source srcset="/media/img/thunderbird/new/screens/laptop-bg.avif" type="image/avif">
           <source srcset="/media/img/thunderbird/new/screens/laptop-bg.webp" type="image/webp">
-          <img src="/media/img/thunderbird/new/screens/laptop-bg.png" alt="{{_('laptop frame')}}">
+          <img src="/media/img/thunderbird/new/screens/laptop-bg.png" alt="">
         </picture>
         <div class="carousel">
           <picture>
-            <source srcset="/media/img/thunderbird/new/screens/115.avif" type="image/avif">
-            <source srcset="/media/img/thunderbird/new/screens/115.webp" type="image/webp">
-            <img src="/media/img/thunderbird/new/screens/115.png" alt="{{_('115 mail')}}">
-          </picture>
-          <picture>
-            <source srcset="/media/img/thunderbird/new/screens/115-calendar.avif" type="image/avif">
-            <source srcset="/media/img/thunderbird/new/screens/115-calendar.webp" type="image/webp">
-            <img src="/media/img/thunderbird/new/screens/115-calendar.png" alt="{{_('115 calendar')}}">
+            <source srcset="/media/img/thunderbird/new/screens/128.avif" type="image/avif">
+            <source srcset="/media/img/thunderbird/new/screens/128.webp" type="image/webp">
+            <img src="/media/img/thunderbird/new/screens/128.png" alt="">
           </picture>
         </div>
       </div>
